@@ -17,15 +17,15 @@ assoc.h conf.h dbop.h defined.h die.h find.h getdbpath.h global.h gparam.h \
 gtagsop.h locatestring.h makepath.h path.h gpathop.h strbuf.h \
 strmake.h tab.h test.h token.h usable.h version.h is_unixy.h abs2rel.h \
 split.h strlimcpy.h linetable.h env.h char.h date.h langmap.h \
-varray.h idset.h strhash.h xargs.h format.h pathconvert.h \
+varray.h idset.h strhash.h xargs.h format.h encodepath.h \
 compress.h checkalloc.h pool.h fileop.h statistics.h args.h logging.h
 
 libgloutil_a_SOURCES = \
 assoc.c conf.c dbop.c defined.c die.c find.c getdbpath.c gtagsop.c locatestring.c \
 makepath.c path.c gpathop.c strbuf.c strmake.c tab.c test.c \
 token.c usable.c version.c is_unixy.c abs2rel.c split.c strlimcpy.c linetable.c \
-env.c char.c date.c langmap.c varray.c idset.c strhash.c xargs.c \
-pathconvert.c compress.c checkalloc.c pool.c fileop.c statistics.c args.c logging.c
+env.c char.c date.c langmap.c varray.c idset.c strhash.c xargs.c encodepath.c \
+compress.c checkalloc.c pool.c fileop.c statistics.c args.c logging.c
 
 AM_CFLAGS = -DBINDIR='"$(bindir)"' -DDATADIR='"$(datadir)"' -DLOCALSTATEDIR='"$(localstatedir)"' -DSYSCONFDIR='"$(sysconfdir)"'
 
